--- a/sass/bloks/_referral.scss
+++ b/sass/bloks/_referral.scss
@@ -1,3 +1,8 @@
+.referral {
+  display: none;
+  padding-bottom: 0;
+}
+
 .referral-title {
   @include font(700, 36, 1.17, 0.03);
   text-align: center;
@@ -21,6 +26,6 @@
   @include font(700, 14, 1.14, 0.03);
   text-align: center;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--main-color-white);
   padding: 27px;
 }
