--- a/sass/bloks/_customers.scss
+++ b/sass/bloks/_customers.scss
@@ -1,13 +1,28 @@
 .customers-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
+  @include desktop {
+    flex-wrap: nowrap;
+  }
+}
+
+.customers-item {
+  width: calc((100% - 30px) / 2);
+
+  @include tablet {
+    width: calc((100% - 60px) / 3);
+  }
+  @include desktop {
+    width: 210px;
+  }
 }
 
 .customers-link {
-  width: 170px;
+  width: 100%;
   height: 92px;
-  border: 1px solid #afb1b8;
+  border: 1px solid var(--main-color-grey-icon);
   border-radius: 4px;
   display: flex;
   justify-content: center;
@@ -18,17 +33,17 @@
 .customers-icon {
   width: 106px;
   height: 60px;
-  fill: #afb1b8;
+  fill: var(--main-color-grey-icon);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:hover .customers-icon,
 .customers-link:focus .customers-icon {
-  fill: #2196f3;
+  fill: var(--main-color-blue);
 }
 
 .customers-link:hover,
 .customers-link:focus {
   border: 1px solid #2196f3;
-  fill: #2196f3;
+  fill: var(--main-color-blue);
 }
