--- a/sass/bloks/_header.scss
+++ b/sass/bloks/_header.scss
@@ -3,40 +3,62 @@
   width: 100%;
   z-index: 10;
   margin: auto 0;
+
   &__container {
     background-color: var(--main-color-white);
-    border-bottom: 1px solid #ececec;
+    border-bottom: 1px solid var(--main-color-line);
     display: flex;
     align-items: center;
+    justify-content: center;
+    height: 60px;
   }
   &__contact {
-    display: flex;
-    background-color: transparent;
-    font: var(--main-color-grey);
+    // display: none;
+    @media screen and (min-width: 768px) {
+      // display: list-item;
+      background-color: transparent;
+      font: var(--main-color-grey);
+    }
   }
   &__icon {
-    margin-right: 10px;
-    fill: currentColor;
+    display: none;
+    @media screen and (min-width: 768px) {
+      display: block;
+      margin-right: 10px;
+      fill: currentColor;
+    }
   }
   &__icon:hover,
   &__icon:focus {
-    fill: var(--main-color-blue);
+    // display: none;
+    @media screen and (min-width: 768px) {
+      // display: block;
+      fill: var(--main-color-blue);
+    }
   }
   &__mail,
   &__tel {
-    @include font(500, 14, 1.14, 0.02);
-    display: flex;
-    align-items: center;
-    color: var(--main-color-grey);
-    padding-top: 32px;
-    padding-bottom: 32px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: none;
+    @media screen and (min-width: 768px) {
+      @include font(500, 14, 1.14, 0.02);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      column-gap: 10px;
+      color: var(--main-color-grey);
+      // padding-top: 32px;
+      // padding-bottom: 32px;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
   }
   &__mail:hover,
   &__mail:focus,
   &__tel:hover,
   &__tel:focus {
-    color: var(--main-color-blue);
+    // display: none;
+    @media screen and (min-width: 768px) {
+      color: var(--main-color-blue);
+    }
   }
 }
 
@@ -45,27 +67,39 @@
 }
 
 .logo__Stu-header {
-  color: #000000;
+  color: var(--main-color-black);
 }
 
 .navigation {
-  display: flex;
-  align-items: center;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+  }
+
   &__logo-base {
     font-family: 'Raleway';
-    @include font(700, 26, 1.19, 0.03);
-    margin-right: 93px;
+    @include font(700, 24, 1.17, 0.03);
+    @media screen and (min-width: 768px) {
+      margin-left: 15px;
+      @include font(700, 26, 1.19, 0.03);
+      // margin-right: 93px;
+    }
   }
   &__list {
-    display: flex;
-    column-gap: 50px;
-    margin-left: auto;
+    display: none;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      column-gap: 50px;
+      margin-left: 93px;
+    }
   }
+
   &__link {
     @include font(500, 14, 1.14, 0.02);
     position: relative;
     color: inherit;
-    padding: 32px 0;
+    padding: 22px 0;
     display: block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
@@ -78,7 +112,7 @@
     width: 100%;
     height: 4px;
     border-radius: 2px;
-    background: #2196f3;
+    background: var(--main-color-blue);
   }
   &__link:hover,
   &__link:focus {
@@ -86,10 +120,14 @@
   }
 }
 
-.choice {
-  color: var(--main-color-blue);
+.navigation__contact {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  width: min-content;
+  margin-left: auto;
 }
 
-.main {
-  padding-top: 80px;
+.choice {
+  color: var(--main-color-blue);
 }
