--- a/sass/bloks/_hero.scss
+++ b/sass/bloks/_hero.scss
@@ -1,22 +1,61 @@
 .main {
-  padding-top: 80px;
+  padding-top: 60px;
 }
+
 .hero {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/Img-header.jpg);
-  max-width: 1600px;
-  height: 600px;
-  padding: 200px 0;
-  margin: 0 auto;
+    url(../../images/header-mob-1x.jpg);
+  height: auto;
+  padding: 118px 0;
+  // margin: 0 auto;
+  background-size: cover;
+  text-align: center;
+  @include retina {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../../images/header-mob-2x.jpg);
+  }
+
+  @include tablet {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../../images/headert-tab-1x.jpg);
+    @include retina {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../../images/headert-tab-2x.jpg);
+    }
+  }
+
+  @include desktop {
+    max-width: 1600px;
+    height: 600px;
+    padding: 200px 0;
+    margin: 0 auto;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../../images/headert-desk-1x.jpg);
+    @include retina {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../../images/headert-desk-2x.jpg);
+    }
+  }
 }
 
 .hero__title {
-  @include font(900, 44, 1.36, 0.06);
-  text-align: center;
+  @include font(900, 20, 1.62, 0.06);
+  // text-align: center;
   text-transform: uppercase;
   color: var(--main-color-white);
   margin: 0 auto 30px;
-  width: 696px;
+  // width: 320px;
+  @media screen and (min-width: 480px) {
+    @include font(900, 26, 1.62, 0.06);
+  }
+  @include tablet {
+    width: 360px;
+  }
+  @include desktop {
+    @include font(900, 44, 1.36, 0.06);
+    margin: 0 auto 30px;
+    width: 696px;
+  }
 }
 
 .hero__btn {
@@ -24,7 +63,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-width: 216px;
+  min-width: 200px;
   height: 50px;
   color: var(--main-color-white);
   background-color: var(--main-color-blue);
@@ -32,9 +71,13 @@
   border-radius: 4px;
   margin: 0 auto;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include desktop {
+    @include font(700, 16, 1.88, 0.06);
+    min-width: 216px;
+  }
 }
 
 .hero__btn:hover,
 .hero__btn:focus {
-  background-color: #188ce8;
+  background-color: var(--main-color-blue-hover);
 }
