--- a/sass/bloks/_portfolio.scss
+++ b/sass/bloks/_portfolio.scss
@@ -1,10 +1,12 @@
+
 .portfolio-list-btn {
   @include font(500, 16, 1.62, 0.03);
+  cursor: pointer;
   text-align: center;
   padding: 6px 22px;
   border: none;
-  color: #212121;
-  background-color: #f5f4fa;
+  color: var(--main-color-text);
+  background-color: var(--main-color-btn-portfolio);
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -18,11 +20,19 @@
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+
+
 .portfolio-list {
+  max-width: 100%;
   display: flex;
-  column-gap: 8px;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-bottom: 40px;
+  @media screen and (min-width: 402px) {
+    max-width: 326px;
+  }
+  // justify-content: center;
+  // margin-bottom: 50px;;;;;
 }
 
 .portfolio-btn {
@@ -33,12 +43,14 @@
 .portfolio-list-pic {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  gap: 30px;
+  // justify-content: center;
+//   column-gap: 30px;
+//   width: 100%;
+gap: 30px;
 }
 
 .portfolio-list-block {
-  background: #ffffff;
+  background: var(--main-color-white);
 }
 
 .portfolio-list-block:hover .portfolio-link-text,
@@ -78,14 +90,14 @@
 
 .container-title {
   padding: 24px 20px;
-  border-left: 1px solid #eeeeee;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid var(--main-color-line);
+  border-right: 1px solid var(--main-color-line);
+  border-bottom: 1px solid var(--main-color-line);
 }
 
 .portfolio-list-title {
   @include font(700, 18, 2, 0.06);
-  color: #212121;
+  color: var(--main-color-text);
   background-color: var(--main-color-white);
   margin-bottom: 4px;
 }
