--- a/sass/bloks/_team.scss
+++ b/sass/bloks/_team.scss
@@ -1,5 +1,5 @@
 .team {
-  background-color: #f5f4fa;
+  background-color: var(--main-color-btn-portfolio);
 }
 
 .team-item {
@@ -7,17 +7,32 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  @include tablet {
+    width: calc((100% - 30px) / 2);
+  }
+  @include desktop {
+    width: 100%;
+  }
 }
 
 .team-title {
-  @include font(700, 36, 1.17, 0.03);
+  @include font(700, 28, 1.17, 0.03);
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  @include desktop {
+    margin-bottom: 50px;
+    @include font(700, 36, 1.17, 0.03);
+  }
 }
 
 .team-list {
   display: flex;
-  column-gap: 30px;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: center;
+  @include desktop {
+    flex-wrap: nowrap;
+  }
 }
 
 .team-name {
@@ -41,17 +56,17 @@
 
 .team-name-link:hover,
 .team-name-link:focus {
-  background-color: #2196f3;
+  background-color: var(--main-color-blue);
 }
 
 .team-name-icon {
-  fill: #afb1b8;
+  fill: var(--main-color-grey-icon);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-name-link:hover .team-name-icon,
 .team-name-link:focus .team-name-icon {
-  fill: #ffffff;
+  fill: var(--main-color-white);
 }
 
 .team-item-title {
