--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -11,8 +11,8 @@
 
 .modal {
   position: absolute;
-  width: 528px;
-  max-height: 581px;
+  width: 95%;
+  height: 550px;
   background-color: var(--main-color-white);
   border-radius: 4px;
   top: 50%;
@@ -22,7 +22,29 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 40px;
+  padding: 20px 20px 20px 20px;
+  @media screen and (min-width: 480px) {
+    padding: 40px;
+    width: 450px;
+    height: 609px;
+  }
+  @include mobile {
+    max-width: 450px;
+  }
+
+  // position: absolute;
+  // width: 528px;
+  // max-height: 581px;
+  // background-color: var(--main-color-white);
+  // border-radius: 4px;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
+  // box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+  //   0px 2px 1px rgba(0, 0, 0, 0.2);
+  // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  //   opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  // padding: 40px;
 }
 
 .btn-close {
@@ -38,6 +60,14 @@
   width: 30px;
   border-radius: 50%;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-top: 14px;
+  margin-bottom: 2px;
+  @media screen and (min-width: 480px) {
+    height: 40px;
+  }
+  @include mobile {
+    margin: 0;
+  }
 }
 
 .btn-close:hover,
@@ -52,15 +82,17 @@
 }
 
 .modal-title {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
+  @include font(700, 16, 1.5, 0.03);
   text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
+  color: var(--main-color-text);
   text-align: center;
   display: block;
+  margin-top: 5px;
   margin-bottom: 12px;
+  @media screen and (min-width: 480px) {
+    @include font(700, 20, 1.5, 0.03);
+    margin-top: 40px;
+  }
 }
 
 .input-wrap {
@@ -80,11 +112,14 @@
 
 .form-input {
   width: 100%;
-  height: 40px;
+  height: 30px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 42px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (min-width: 480px) {
+    height: 40px;
+  }
 }
 
 .input-icon {
@@ -103,24 +138,27 @@
 }
 
 .input-title {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: #757575;
+  @include font(400, 10, 1.17, 0.01);
+  color: var(--main-color-grey);
   display: block;
   margin-top: 10px;
   margin-bottom: 4px;
+  @media screen and (min-width: 480px) {
+    @include font(400, 12, 1.17, 0.01);
+  }
 }
 
 .coment-input {
   width: 100%;
-  height: 120px;
+  height: 80px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
   padding: 12px 16px;
   transition: border-color 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include mobile {
+    height: 120px;
+  }
 }
 
 .coment-input::placeholder {
@@ -152,17 +190,18 @@
 }
 
 .check-text {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #757575;
+  @include font(400, 12, 1.17, 0.03);
+  color: var(--main-color-grey);
   display: flex;
   align-items: center;
-  gap: 8px;
-  margin-left: 14px;
+  gap: 6px;
+  // margin-left: 10px;
   margin-top: 20px;
   margin-bottom: 30px;
+  @media screen and (min-width: 480px) {
+    @include font(400, 12, 1.17, 0.01);
+    margin-left: 14px;
+  }
 }
 
 .check-link {
@@ -172,7 +211,7 @@
 .check-text span {
   width: 16px;
   height: 15px;
-  border: 2px solid #212121;
+  border: 2px solid var(--main-color-btntext-portfolio);
   border-radius: 3px;
   display: flex;
   align-items: center;
@@ -182,13 +221,10 @@
 }
 
 .btn-submit {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
+  @include font(700, 16, 1.88, 0.06);
   display: flex;
   align-items: center;
   justify-content: center;
-  letter-spacing: 0.06em;
   color: var(--main-color-white);
   margin: 0 auto;
   min-width: 200px;
