--- a/sass/bloks/_portfolio.scss
+++ b/sass/bloks/_portfolio.scss
@@ -1,4 +1,3 @@
-
 .portfolio-list-btn {
   @include font(500, 16, 1.62, 0.03);
   cursor: pointer;
@@ -20,8 +19,6 @@
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-
-
 .portfolio-list {
   max-width: 100%;
   display: flex;
@@ -31,8 +28,12 @@
   @media screen and (min-width: 402px) {
     max-width: 326px;
   }
-  // justify-content: center;
-  // margin-bottom: 50px;;;;;
+  @media screen and (min-width: 768px) {
+    max-width: 100%;
+    flex-wrap: nowrap;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
 }
 
 .portfolio-btn {
@@ -43,14 +44,22 @@
 .portfolio-list-pic {
   display: flex;
   flex-wrap: wrap;
-  // justify-content: center;
-//   column-gap: 30px;
-//   width: 100%;
-gap: 30px;
+  gap: 30px;
+  @media screen and (min-width: 768px) {
+    // justify-content: center;
+    // column-gap: 30px;
+    width: 100%;
+  }
 }
 
 .portfolio-list-block {
   background: var(--main-color-white);
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 60px) / 3);
+  }
 }
 
 .portfolio-list-block:hover .portfolio-link-text,
