--- a/sass/bloks/_referral.scss
+++ b/sass/bloks/_referral.scss
@@ -1,6 +1,10 @@
 .referral {
   display: none;
-  padding-bottom: 0;
+
+  @media screen and (min-width: 1200px) {
+    display: block;
+    padding-bottom: 24px;
+  }
 }
 
 .referral-title {
