--- a/sass/bloks/_skill.scss
+++ b/sass/bloks/_skill.scss
@@ -1,8 +1,9 @@
 .skill {
   padding-top: 60px;
   padding-bottom: 60px;
-  @include desktop {
-    padding-top: 94px;
+   @media screen and (min-width: 1200px) {
+   padding-top: 94px;
+  padding-bottom: 0;
   }
 }
 
