--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,3 @@
-:root {
-  --main-color-blue: #2196f3;
-  --main-color-blue-hover: #188ce8;
-  --main-color-grey: #757575;
-  --main-color-grey-icon: #afb1b8;
-  --main-color-white: #ffffff;
-  --main-color-btn-portfolio: #f5f4fa;
-  --main-color-btntext-portfolio: #212121;
-  --main-color-text: #212121;
-  --main-color-line: #ececec;
-  --main-color-black: #000000;
-  --main-color-footer: #2f303a;
-  --main-cubic: cubic-bezier(0.4, 0, 0.2, 1);
-  --main-font-family: "Roboto", sans-serif;
-}
-
 p,
 h1,
 h2,
@@ -40,12 +24,29 @@ img {
   height: auto;
 }
 
+:root {
+  --main-color-blue: #2196f3;
+  --main-color-blue-hover: #188ce8;
+  --main-color-grey: #757575;
+  --main-color-grey-icon: #afb1b8;
+  --main-color-white: #ffffff;
+  --main-color-btn-portfolio: #f5f4fa;
+  --main-color-btntext-portfolio: #212121;
+  --main-color-text: #212121;
+  --main-color-line: #ececec;
+  --main-color-black: #000000;
+  --main-color-footer: #2f303a;
+  --main-cubic: cubic-bezier(0.4, 0, 0.2, 1);
+  --main-font-family: "Roboto", sans-serif;
+}
+
 body {
-  font-family: var(-main-font-family);
+  font-family: var(--main-font-family);
   color: var(--main-color-text);
   letter-spacing: 0.03em;
   font-size: 14px;
   line-height: 1.71;
+  background-color: var(--main-color-white);
 }
 
 .list {
@@ -128,6 +129,12 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   height: 60px;
+}
+@media screen and (min-width: 768px) {
+  .header__container {
+    height: 80px;
+    width: auto;
+  }
 }
 @media screen and (min-width: 768px) {
   .header__contact {
@@ -245,7 +252,7 @@ body {
   letter-spacing: 0.02em;
   position: relative;
   color: inherit;
-  padding: 22px 0;
+  padding: 32px 0;
   display: block;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -302,8 +309,8 @@ body {
 }
 
 .hero {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/header-mob-1x.jpg);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/header-mob-1x.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/header-mob-1x.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-mob-1x.jpg);
   height: auto;
   padding: 118px 0;
   background-size: cover;
@@ -311,20 +318,20 @@ body {
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/header-mob-2x.jpg);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/header-mob-2x.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/header-mob-2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-mob-2x.jpg);
   }
 }
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/headert-tab-1x.jpg);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/headert-tab-1x.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/headert-tab-1x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/headert-tab-1x.jpg);
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/headert-tab-2x.jpg);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/headert-tab-2x.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/headert-tab-2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/headert-tab-2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -333,14 +340,14 @@ body {
     height: 600px;
     padding: 200px 0;
     margin: 0 auto;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/headert-desk-1x.jpg);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/headert-desk-1x.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/headert-desk-1x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/headert-desk-1x.jpg);
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/headert-desk-2x.jpg);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/headert-desk-2x.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/headert-desk-2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/headert-desk-2x.jpg);
   }
 }
 
@@ -839,12 +846,10 @@ body {
 
 .footer-soc {
   margin-top: 60px;
-  margin-bottom: 60px;
 }
 @media screen and (min-width: 1200px) {
   .footer-soc {
     margin-left: 70px;
-    margin-bottom: 100px;
     margin-right: 93px;
   }
 }
@@ -901,6 +906,9 @@ body {
   background-color: var(--main-color-blue);
 }
 
+.mailing {
+  margin-top: 60px;
+}
 @media screen and (min-width: 1200px) {
   .mailing {
     width: 570px;
@@ -937,16 +945,27 @@ body {
 @media screen and (min-width: 768px) {
   .mailing-box {
     min-width: 450px;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 @media screen and (min-width: 1200px) {
   .mailing-box {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: start;
-    gap: 30px;
+    gap: 12px;
     width: 100%;
   }
 }
@@ -955,7 +974,7 @@ body {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  width: 358px;
+  width: 450px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -965,9 +984,9 @@ body {
   color: rgba(255, 255, 255, 0.6);
   padding-left: 16px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .mailing-input {
-    max-width: 450px;
+    width: 368px;
   }
 }
 
@@ -1027,9 +1046,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   color: var(--main-color-white);
-  margin-left: 12px;
 }
-
 .mailing-icon {
   width: 24px;
   height: 24px;
@@ -1542,7 +1559,7 @@ body {
 
 .portfolio-list-btn {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 1.62;
   letter-spacing: 0.03em;
   cursor: pointer;
@@ -1556,6 +1573,14 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 356px) {
+  .portfolio-list-btn {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    letter-spacing: 0.03em;
+  }
 }
 
 .portfolio-list-btn:hover,
@@ -1608,6 +1633,9 @@ body {
 }
 @media screen and (min-width: 768px) {
   .portfolio-list-pic {
+    -webkit-column-gap: 30px;
+       -moz-column-gap: 30px;
+            column-gap: 30px;
     width: 100%;
   }
 }
@@ -1652,7 +1680,7 @@ body {
 }
 
 .portfolio-link-text {
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: var(--main-color-white);
@@ -1660,7 +1688,7 @@ body {
   top: 0;
   left: 0;
   height: 100%;
-  padding: 24px 63px;
+  padding: 10px 15px;
   background: rgba(33, 150, 243, 0.9);
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
@@ -1669,12 +1697,26 @@ body {
   transition: transform 2250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 2250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 2250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 410px) {
+  .portfolio-link-text {
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    padding: 24px 63px;
+  }
+}
 
 .container-title {
   padding: 24px 20px;
   border-left: 1px solid var(--main-color-line);
   border-right: 1px solid var(--main-color-line);
   border-bottom: 1px solid var(--main-color-line);
+  height: 146px;
+}
+@media screen and (min-width: 1200px) {
+  .container-title {
+    height: auto;
+  }
 }
 
 .portfolio-list-title {
