--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,9 +1,10 @@
 body {
-  font-family: var(-main-font-family);
+  font-family: var(--main-font-family);
   color: var(--main-color-text);
   letter-spacing: 0.03em;
   font-size: 14px;
   line-height: 1.71;
+  background-color: var(--main-color-white);
 }
 
 .list {
