--- a/sass/bloks/_footer.scss
+++ b/sass/bloks/_footer.scss
@@ -75,10 +75,10 @@
 
 .footer-soc {
   margin-top: 60px;
-  margin-bottom: 60px;
+  // margin-bottom: 60px;
   @media screen and (min-width: 1200px) {
     margin-left: 70px;
-    margin-bottom: 100px;
+    // margin-bottom: 100px;
     margin-right: 93px;
   }
 }
@@ -120,8 +120,14 @@
 }
 
 .mailing {
+  margin-top: 60px;
+
+  @media screen and (min-width: 768px) {
+    
+  }
   @media screen and (min-width: 1200px) {
     width: 570px;
+
   }
 }
 
@@ -143,18 +149,21 @@
   gap: 20px;
   @media screen and (min-width: 768px) {
     min-width: 450px;
-    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
   }
   @media screen and (min-width: 1200px) {
+    flex-direction: row;
+    flex-wrap: nowrap;
     justify-content: start;
-    gap: 30px;
+    gap: 12px;
     width: 100%;
   }
 }
 
 .mailing-input {
   @include font(null, 16, 1.25, 0.03);
-  width: 358px;
+  width: 450px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -162,8 +171,8 @@
   background: #2f303a;
   color: rgba(255, 255, 255, 0.6);
   padding-left: 16px;
-  @media screen and (min-width: 768px) {
-    max-width: 450px;
+  @media screen and (min-width: 1200px) {
+    width: 368px;
   }
 }
 
@@ -183,7 +192,10 @@
   align-items: center;
   justify-content: center;
   color: var(--main-color-white);
-  margin-left: 12px;
+  
+  @media screen and (min-width: 768px) {
+    // margin-left: 12px;
+  }
 }
 
 .mailing-icon {
