--- a/sass/bloks/_hero.scss
+++ b/sass/bloks/_hero.scss
@@ -4,7 +4,7 @@
 
 .hero {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../../images/header-mob-1x.jpg);
+    url(../images/header-mob-1x.jpg);
   height: auto;
   padding: 118px 0;
   // margin: 0 auto;
@@ -12,15 +12,15 @@
   text-align: center;
   @include retina {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/header-mob-2x.jpg);
+      url(../images/header-mob-2x.jpg);
   }
 
   @include tablet {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/headert-tab-1x.jpg);
+      url(../images/headert-tab-1x.jpg);
     @include retina {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/headert-tab-2x.jpg);
+        url(../images/headert-tab-2x.jpg);
     }
   }
 
@@ -30,10 +30,10 @@
     padding: 200px 0;
     margin: 0 auto;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/headert-desk-1x.jpg);
+      url(../images/headert-desk-1x.jpg);
     @include retina {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/headert-desk-2x.jpg);
+        url(../images/headert-desk-2x.jpg);
     }
   }
 }
