--- a/sass/bloks/_portfolio.scss
+++ b/sass/bloks/_portfolio.scss
@@ -1,5 +1,5 @@
 .portfolio-list-btn {
-  @include font(500, 16, 1.62, 0.03);
+  @include font(500, 12, 1.62, 0.03);
   cursor: pointer;
   text-align: center;
   padding: 6px 22px;
@@ -9,7 +9,10 @@
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    @media screen and (min-width: 356px) {
+      @include font(500, 16, 1.62, 0.03);
+    }
+  }
 
 .portfolio-list-btn:hover,
 .portfolio-list-btn:focus {
@@ -46,8 +49,10 @@
   flex-wrap: wrap;
   gap: 30px;
   @media screen and (min-width: 768px) {
+    
+    // flex-grow: 1;
     // justify-content: center;
-    // column-gap: 30px;
+    column-gap: 30px;
     width: 100%;
   }
 }
@@ -84,17 +89,21 @@
 }
 
 .portfolio-link-text {
-  @include font(null, 18, 1.56, 0.03);
+  @include font(null, 16, 1.56, 0.03);
   color: var(--main-color-white);
 
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
-  padding: 24px 63px;
+  padding: 10px 15px;
   background: rgba(33, 150, 243, 0.9);
   transform: translateY(100%);
   transition: transform 2250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (min-width: 410px) {
+    @include font(null, 18, 1.56, 0.03);
+    padding: 24px 63px;
+  }
 }
 
 .container-title {
@@ -102,6 +111,10 @@
   border-left: 1px solid var(--main-color-line);
   border-right: 1px solid var(--main-color-line);
   border-bottom: 1px solid var(--main-color-line);
+  height: 146px;
+  @media screen and (min-width: 1200px) {
+    height: auto;
+  }
 }
 
 .portfolio-list-title {
