--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,11 @@ body {
 @media screen and (min-width: 768px) {
   .header__container {
     height: 80px;
-    width: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__container {
+    max-width: 1200px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -306,6 +310,11 @@ body {
 
 .main {
   padding-top: 60px;
+}
+@media screen and (min-width: 768px) {
+  .main {
+    padding-top: 80px;
+  }
 }
 
 .hero {
