--- a/sass/bloks/_header.scss
+++ b/sass/bloks/_header.scss
@@ -12,10 +12,13 @@
     justify-content: center;
     height: 60px;
     @media screen and (min-width: 768px) {
-     height: 80px;
-     width: auto;
+      height: 80px;
+    }
+    @media screen and (min-width: 1200px) {
+      max-width: 1200px;
     }
   }
+
   &__contact {
     // display: none;
     @media screen and (min-width: 768px) {
