--- a/css/main.css
+++ b/css/main.css
@@ -220,7 +220,6 @@ body {
 }
 @media screen and (min-width: 768px) {
   .navigation__logo-base {
-    margin-left: 15px;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
@@ -680,6 +679,7 @@ body {
   letter-spacing: 0.03em;
   text-align: center;
   margin-bottom: 16px;
+  color: var(--main-color-grey);
 }
 
 .customers-list {
@@ -756,18 +756,6 @@ body {
   padding: 60px 0;
   text-align: center;
 }
-@media screen and (min-width: 768px) {
-  .footer {
-    padding-top: 0;
-    padding-bottom: 60px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .footer {
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-}
 
 .footer-logo {
   margin-bottom: 20px;
@@ -832,7 +820,6 @@ body {
 
 .footer-list {
   margin-top: 8px;
-  margin-bottom: 8px;
 }
 
 .footer-addres-contact {
@@ -853,8 +840,22 @@ body {
   color: var(--main-color-blue);
 }
 
-.footer-soc {
-  margin-top: 60px;
+@media screen and (max-width: 767px) {
+  .footer-soc {
+    margin-top: 60px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-soc {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 20px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer-soc {
@@ -881,6 +882,11 @@ body {
   text-transform: uppercase;
   color: var(--main-color-white);
   margin-bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .footer-title {
+    margin-bottom: 0;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer-title {
@@ -921,6 +927,7 @@ body {
 @media screen and (min-width: 1200px) {
   .mailing {
     width: 570px;
+    margin-top: 0;
   }
 }
 
@@ -1103,12 +1110,6 @@ body {
     max-width: 450px;
   }
 }
-@media screen and (min-width: 480px) {
-  .modal {
-    width: 528px;
-  }
-}
-
 .btn-close {
   position: absolute;
   display: -webkit-box;
@@ -1129,7 +1130,6 @@ body {
   border-radius: 50%;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-top: 14px;
   margin-bottom: 2px;
 }
 @media screen and (min-width: 480px) {
@@ -1623,7 +1623,7 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
   }
 }
 
@@ -1681,6 +1681,18 @@ body {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 768px) {
+  .portfolio-link-title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 100%;
+  }
+}
 
 .portfolio-list-block:hover .portfolio-link-title,
 .portfolio-list-block:focus .portfolio-link-title {
@@ -1720,11 +1732,12 @@ body {
   border-left: 1px solid var(--main-color-line);
   border-right: 1px solid var(--main-color-line);
   border-bottom: 1px solid var(--main-color-line);
-  height: 146px;
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .container-title {
-    height: auto;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
   }
 }
 
