--- a/sass/bloks/_footer.scss
+++ b/sass/bloks/_footer.scss
@@ -2,14 +2,6 @@
   background-color: var(--main-color-footer);
   padding: 60px 0;
   text-align: center;
-  @media screen and (min-width: 768px) {
-    padding-top: 0;
-    padding-bottom: 60px;
-  }
-  @media screen and (min-width: 1200px) {
-    padding-top: 0;
-    padding-bottom: 0;
-  }
 }
 
 .footer-logo {
@@ -54,8 +46,6 @@
 }
 .footer-list {
   margin-top: 8px;
-  margin-bottom: 8px;
-  // margin-top: 9px;
 }
 
 .footer-addres-contact {
@@ -74,11 +64,16 @@
 }
 
 .footer-soc {
-  margin-top: 60px;
-  // margin-bottom: 60px;
+  @media screen and (max-width: 767px) {
+    margin-top: 60px;
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
   @media screen and (min-width: 1200px) {
     margin-left: 70px;
-    // margin-bottom: 100px;
     margin-right: 93px;
   }
 }
@@ -94,6 +89,9 @@
   text-transform: uppercase;
   color: var(--main-color-white);
   margin-bottom: 20px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+  }
   @media screen and (min-width: 1200px) {
     text-align: left;
   }
@@ -123,11 +121,10 @@
   margin-top: 60px;
 
   @media screen and (min-width: 768px) {
-    
   }
   @media screen and (min-width: 1200px) {
     width: 570px;
-
+    margin-top: 0;
   }
 }
 
@@ -192,7 +189,7 @@
   align-items: center;
   justify-content: center;
   color: var(--main-color-white);
-  
+
   @media screen and (min-width: 768px) {
     // margin-left: 12px;
   }
