--- a/sass/bloks/_portfolio.scss
+++ b/sass/bloks/_portfolio.scss
@@ -9,10 +9,10 @@
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    @media screen and (min-width: 356px) {
-      @include font(500, 16, 1.62, 0.03);
-    }
+  @media screen and (min-width: 356px) {
+    @include font(500, 16, 1.62, 0.03);
   }
+}
 
 .portfolio-list-btn:hover,
 .portfolio-list-btn:focus {
@@ -35,7 +35,7 @@
     max-width: 100%;
     flex-wrap: nowrap;
     justify-content: center;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
   }
 }
 
@@ -49,7 +49,6 @@
   flex-wrap: wrap;
   gap: 30px;
   @media screen and (min-width: 768px) {
-    
     // flex-grow: 1;
     // justify-content: center;
     column-gap: 30px;
@@ -80,6 +79,11 @@
 .portfolio-link-title {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
 }
 
 .portfolio-list-block:hover .portfolio-link-title,
@@ -111,9 +115,8 @@
   border-left: 1px solid var(--main-color-line);
   border-right: 1px solid var(--main-color-line);
   border-bottom: 1px solid var(--main-color-line);
-  height: 146px;
-  @media screen and (min-width: 1200px) {
-    height: auto;
+    @media screen and (min-width: 768px) {
+    flex-grow: 1;
   }
 }
 
