--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -32,7 +32,7 @@
     max-width: 450px;
   }
   @media screen and (min-width: 480px) {
-    width: 528px;
+    // width: 528px;
     // max-height: 581px;
   }
 
@@ -64,7 +64,7 @@
   width: 30px;
   border-radius: 50%;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-top: 14px;
+  // margin-top: 14px;
   margin-bottom: 2px;
   @media screen and (min-width: 480px) {
     height: 40px;
