--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -22,19 +22,20 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 20px 20px 20px 20px;
+  padding: 20px 40px 20px 40px;
   @media screen and (min-width: 480px) {
     padding: 40px;
     width: 450px;
     height: 609px;
   }
-  @include mobile {
-    max-width: 450px;
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: auto;
   }
-  @media screen and (min-width: 480px) {
-    // width: 528px;
-    // max-height: 581px;
-  }
+  //   @media screen and (min-width: 480px) {
+  //   // width: 528px;
+  //   // max-height: 581px;
+  // }
 
   // position: absolute;
   // width: 528px;
@@ -64,7 +65,6 @@
   width: 30px;
   border-radius: 50%;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  // margin-top: 14px;
   margin-bottom: 2px;
   @media screen and (min-width: 480px) {
     height: 40px;
@@ -94,18 +94,10 @@
   color: var(--main-color-text);
   text-align: center;
   display: block;
-  margin-top: 5px;
   margin-bottom: 12px;
-  @media screen and (min-width: 480px) {
+
+  @media screen and (min-width: 400px) {
     @include font(700, 20, 1.5, 0.03);
-    margin-top: 40px;
-  }
-  @media screen and (min-width: 480px) {
-    height: 30px;
-    @include font(700, 20, 1.5, 0.03);
-  }
-  @media screen and (width: 1200px) {
-    margin-top: 0;
   }
 }
 
@@ -163,18 +155,16 @@
 }
 
 .coment-input {
+  @include font(400, 14, 1.14, 0.01);
   width: 100%;
-  height: 80px;
+  height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
   padding: 12px 16px;
   transition: border-color 1250ms cubic-bezier(0.4, 0, 0.2, 1);
-  @include mobile {
-    height: 120px;
-  }
-  @media screen and (width: 1200px) {
-    height: 120px;
+  @media screen and (min-width: 1200px) {
+    @include font(400, 12, 1.14, 0.01);
   }
 }
 
@@ -217,13 +207,11 @@
   margin-top: 20px;
   margin-bottom: 30px;
   @media screen and (min-width: 480px) {
-    @include font(400, 12, 1.17, 0.01);
     margin-left: 14px;
   }
   @media screen and (min-width: 1200px) {
     @include font(400, 14, 1.71, 0.03);
     gap: 8px;
-    margin-left: 14px;
   }
 }
 
